--- a/angular-web-app/src/app/components/_pages/page-not-found/page-not-found.component.html
+++ b/angular-web-app/src/app/components/_pages/page-not-found/page-not-found.component.html
@@ -12,13 +12,15 @@
         [text]="content.text">
       </app-section-title>
       <div class="row">
-        <div class="col-12">
-          <button mat-raised-button color="accent" class="rounded-pill mr-5" (click)="goBack()">
+        <div class="col-xs-12 col-sm-6 d-flex align-items-center justify-content-center">
+          <button mat-raised-button color="accent" class="rounded-pill mt-3" (click)="goBack()">
+            <mat-icon>reply</mat-icon>
             {{content.btnBackText}}
           </button>
         </div>
-        <div class="col-12 mt-3">
-          <button mat-raised-button color="accent" class="rounded-pill" routerLink="{{content.btnHomeLink}}">
+        <div class="col-xs-12 col-sm-6 d-flex align-items-center justify-content-center">
+          <button mat-raised-button color="accent" class="rounded-pill mt-3" routerLink="{{content.btnHomeLink}}">
+            <mat-icon>home</mat-icon>
             {{content.btnHomeText}}
           </button>
         </div>
