changed header cms

--- a/angular-web-app/src/app/components/_admin/page-home/page-home.component.html
+++ b/angular-web-app/src/app/components/_admin/page-home/page-home.component.html
@@ -26,7 +26,7 @@
           <h4 class="title-underlined mb-0 mt-2">Header</h4>
         </mat-panel-title>
       </mat-expansion-panel-header>
-      <app-comp-header></app-comp-header>
+      <app-comp-header [page]="'home'"></app-comp-header>
       <mat-action-row>
         <button mat-raised-button color="accent" (click)="nextStep()">Volgende</button>
       </mat-action-row>
