--- a/angular-web-app/src/app/components/_pages/page-not-found/page-not-found.component.html
+++ b/angular-web-app/src/app/components/_pages/page-not-found/page-not-found.component.html
@@ -3,7 +3,8 @@
 
 <!-- Main -->
 <main id="404" class="main main-raised">
-  <!-- News -->
+
+  <!-- Buttons -->
   <section class="page-section bg-light">
     <div class="container">
       <app-section-title 
