--- a/angular-web-app/src/app/components/_pages/home/home.component.html
+++ b/angular-web-app/src/app/components/_pages/home/home.component.html
@@ -3,7 +3,7 @@
 
 <main id="home" class="main main-raised">
   <!-- Services -->
-  <section class="page-section bg-light">
+  <section *ngIf="services.active" class="page-section bg-light">
     <div class="container">
       <app-section-title 
         [title]="services.title"
@@ -20,7 +20,7 @@
   </section>
 
   <!-- Featured -->
-  <section class="page-section">
+  <section *ngIf="featured.active" class="page-section">
     <div class="container">
       <app-section-title 
         [title]="featured.title"
@@ -31,9 +31,8 @@
     <div class="container">
       <div class="row">
         <div class="col-12">
-          <!-- <app-featured [painting]="featuredPainting"></app-featured> -->
           <app-painting-card 
-            [painting]="featured.painting" 
+            [painting]="featured.painting"
             [maxHeight]="featured.maxHeight">
           </app-painting-card>
         </div>
@@ -42,7 +41,7 @@
   </section>
 
   <!-- Latest News -->
-  <section class="page-section bg-light">
+  <section *ngIf="latestNews.active"  class="page-section bg-light">
     <div class="container">
       <app-section-title 
         [title]="latestNews.title"
@@ -59,7 +58,7 @@
   </section>
 
   <!-- Latest paintings -->
-  <section class="page-section">
+  <section *ngIf="latestWork.active" class="page-section">
     <div class="container">
       <app-section-title
         [title]="latestWork.title"
@@ -76,7 +75,7 @@
   </section>
 
   <!-- CTA -->
-  <section class="page-section" [style.backgroundImage]="'url(' + cta.image + ')'">
+  <section *ngIf="cta.active" class="page-section" [style.backgroundImage]="'url(' + cta.image + ')'">
     <div class="container">
       <div class="col-12">
         <app-call-to-action
