--- a/angular-web-app/src/app/components/section-title/section-title.component.html
+++ b/angular-web-app/src/app/components/section-title/section-title.component.html
@@ -6,9 +6,17 @@
     <p *ngIf="text" class="txt-dark-muted">{{text}}</p>
   </div>
   <div *ngIf="link" class="col-md-4 d-flex align-items-center justify-content-end">
-    <a href="{{link}}" class="txt-secondary text-sm">
-      Show more
-      <i class="fas fa-angle-double-right ml-2"></i>
+    <a mat-mini-fab color="accent" aria-label="Read more" href="{{link}}">
+      <mat-icon *ngIf="!linkIcon">read_more</mat-icon>
+      <mat-icon *ngIf="linkIcon">{{linkIcon}}</mat-icon>
     </a>
   </div>
+
+  <div *ngIf="modal" class="col-md-4 d-flex align-items-center justify-content-end">
+    <button mat-fab color="accent" aria-label="Preview page" (click)="openModal(modal)">
+      <mat-icon *ngIf="!modalIcon">open_in_new</mat-icon>
+      <mat-icon *ngIf="modalIcon">{{modalIcon}}</mat-icon>
+    </button>
+  </div>
+
 </div>
