--- a/angular-web-app/src/app/components/_admin/comp-features/comp-features.component.html
+++ b/angular-web-app/src/app/components/_admin/comp-features/comp-features.component.html
@@ -2,17 +2,25 @@
   <div class="row mb-4">
     <div class="col-12">
       <mat-card class="mat-elevation-z4">
-        <div class="container">
-          <app-section-title [title]="featured.title" [subTitle]="featured.subTitle" [text]="featured.text">
-          </app-section-title>
-        </div>
-        <div class="container">
-          <div class="row">
-            <div class="col-12">
-              <app-painting-card [painting]="featured.painting" [maxHeight]="featured.maxHeight">
-              </app-painting-card>
+        <div *ngIf="featured.active">
+          <div class="container-fluid">
+            <app-section-title [title]="featured.title" [subTitle]="featured.subTitle" [text]="featured.text">
+            </app-section-title>
+          </div>
+          <div class="container-fluid">
+            <div class="row">
+              <div class="col-12">
+                <app-painting-card [painting]="featured.painting" [maxHeight]="featured.maxHeight">
+                </app-painting-card>
+              </div>
             </div>
           </div>
+        </div>
+        <!-- Not visible -->
+        <div *ngIf="!featured.active" class="w-100 text-center">
+          <ngb-alert [dismissible]="false" class="mb-0">
+            <strong>Niet</strong> zichtbaar op de website.
+          </ngb-alert>
         </div>
       </mat-card>
     </div>
