--- a/angular-web-app/src/app/components/_admin/comp-latest-news/comp-latest-news.component.html
+++ b/angular-web-app/src/app/components/_admin/comp-latest-news/comp-latest-news.component.html
@@ -2,11 +2,8 @@
   <div class="row mb-4">
     <div class="col-12">
       <mat-card class="mat-elevation-z4">
-        <div class="container">
-          <app-section-title 
-            [title]="latestNews.title"
-            [subTitle]="latestNews.subTitle"
-            [text]="latestNews.text"
+        <div *ngIf="latestNews.active" class="container-fluid">
+          <app-section-title [title]="latestNews.title" [subTitle]="latestNews.subTitle" [text]="latestNews.text"
             [link]="latestNews.link">
           </app-section-title>
           <div class="row">
@@ -15,6 +12,12 @@
             </div>
           </div>
         </div>
+        <!-- Not visible -->
+        <div *ngIf="!latestNews.active" class="w-100 text-center">
+          <ngb-alert [dismissible]="false" class="mb-0">
+            <strong>Niet</strong> zichtbaar op de website.
+          </ngb-alert>
+        </div>
       </mat-card>
     </div>
   </div>
@@ -22,7 +25,7 @@
   <div class="row mb-4">
     <div class="col-12">
       <mat-card class="mat-elevation-z4">
-        
+
         <form (ngSubmit)="onSubmit()" #matForm="ngForm">
 
           <div class="form-group row">
