--- a/angular-web-app/src/app/components/_admin/toolbar/toolbar.component.html
+++ b/angular-web-app/src/app/components/_admin/toolbar/toolbar.component.html
@@ -3,7 +3,7 @@
     <mat-icon>menu</mat-icon>
   </button>
 
-  <img src="https://bbalvanera.mx/img/matdesign.png" alt="logo" class="brand-img rounded-circle img-thumbnail">
+  <img src="../../../../assets/img/mdlogo.jpg" alt="logo" class="brand-img rounded-circle img-thumbnail">
 
   <span>Material Admin</span>
   <span class="spacer"></span>
