updated portfolio overview

--- a/angular-web-app/src/styles.scss
+++ b/angular-web-app/src/styles.scss
@@ -375,17 +375,15 @@ hr.divider {
 /*************************************/
 /**             Tables              **/
 /*************************************/
-.table-responsive {
-  max-height: 300px;
-}
 
 td.mat-cell {
   white-space: nowrap;
-  padding: 0 5px !important;
+  padding: 0.5rem !important;
 }
 
 .img-table {
   max-width: 100px;
+  height: auto;
 }
 /*************************************/
 /**          Color Helpers          **/
