--- a/angular-web-app/src/app/components/_admin/painting-overview/painting-overview.component.html
+++ b/angular-web-app/src/app/components/_admin/painting-overview/painting-overview.component.html
@@ -25,40 +25,56 @@
           <table mat-table [dataSource]="dataSource" class="w-100" matSort matSortActive="created"
             matSortDirection="desc">
             <ng-container matColumnDef="thumbnail" sticky>
-              <th mat-header-cell *matHeaderCellDef> </th>
+              <th mat-header-cell *matHeaderCellDef> Afbeelding </th>
               <td mat-cell *matCellDef="let painting">
-                <img src="{{ painting.thumbnail }}" alt="{{ painting.title }}" class="rounded img-thumbnail img-table" height="50px">
+                <img src="{{ painting.thumbnail }}" alt="{{ painting.title }}"
+                  class="rounded img-table mat-elevation-z2">
               </td>
             </ng-container>
 
             <ng-container matColumnDef="title">
-              <th mat-header-cell *matHeaderCellDef mat-sort-header> Title </th>
+              <th mat-header-cell *matHeaderCellDef mat-sort-header> Titel </th>
               <td mat-cell *matCellDef="let painting"> {{ painting.title }} </td>
             </ng-container>
 
             <ng-container matColumnDef="artist">
-              <th mat-header-cell *matHeaderCellDef mat-sort-header> Artist </th>
+              <th mat-header-cell *matHeaderCellDef mat-sort-header> Artiest </th>
               <td mat-cell *matCellDef="let painting"> {{ painting.artist }} </td>
             </ng-container>
 
             <ng-container matColumnDef="paint">
-              <th mat-header-cell *matHeaderCellDef mat-sort-header> Paint </th>
+              <th mat-header-cell *matHeaderCellDef mat-sort-header> Verf </th>
               <td mat-cell *matCellDef="let painting"> {{ painting.paint }} </td>
             </ng-container>
 
             <ng-container matColumnDef="created">
-              <th mat-header-cell *matHeaderCellDef mat-sort-header> Created </th>
+              <th mat-header-cell *matHeaderCellDef mat-sort-header> Toegevoegd </th>
               <td mat-cell *matCellDef="let painting"> {{ painting.timestampCreated | date }} </td>
             </ng-container>
 
             <ng-container matColumnDef="active">
-              <th mat-header-cell *matHeaderCellDef> Active </th>
+              <th mat-header-cell *matHeaderCellDef> Actief </th>
               <td mat-cell *matCellDef="let painting">
                 <mat-slide-toggle checked="{{ painting.active }}"></mat-slide-toggle>
               </td>
             </ng-container>
 
-            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <ng-container matColumnDef="options">
+              <th mat-header-cell *matHeaderCellDef> Opties </th>
+              <td mat-cell *matCellDef="let painting">
+                <button mat-icon-button color="accent" (click)="setModalPainting(painting); openModal(modalContent)" class="mr-2">
+                  <mat-icon>launch</mat-icon>
+                </button>
+                <button mat-icon-button color="accent" class="mr-2">
+                  <mat-icon>edit</mat-icon>
+                </button>
+                <button mat-icon-button color="warn">
+                  <mat-icon>delete</mat-icon>
+                </button>
+              </td>
+            </ng-container>
+
+            <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
             <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 
             <!-- Row shown when there is no matching data. -->
@@ -69,7 +85,7 @@
         </div>
 
         <!-- Paginator -->
-        <mat-paginator [pageSizeOptions]="[5, 10, 25]" [length]="paintings.length" class="mb-5">
+        <mat-paginator [pageSizeOptions]="[10, 25, 50]" [length]="paintings.length" class="mb-5">
         </mat-paginator>
 
       </div>
@@ -77,3 +93,17 @@
     </div>
   </div>
 </div>
+
+
+<!-- Page preview -->
+<ng-template #modalContent>
+
+  <mat-dialog-content>
+    <app-painting-detail [painting]="modalPainting"></app-painting-detail>
+  </mat-dialog-content>
+
+  <mat-dialog-actions align="end">
+    <button mat-button mat-dialog-close cdkFocusInitial>Close</button>
+  </mat-dialog-actions>
+
+</ng-template>
