--- a/angular-web-app/src/app/components/_admin/painting-overview/painting-overview.component.html
+++ b/angular-web-app/src/app/components/_admin/painting-overview/painting-overview.component.html
@@ -63,7 +63,7 @@
               <th mat-header-cell *matHeaderCellDef> Opties </th>
               <td mat-cell *matCellDef="let painting">
                 <button mat-icon-button color="accent" (click)="setModalPainting(painting); openModal(modalContent)" class="mr-2">
-                  <mat-icon>launch</mat-icon>
+                  <mat-icon>visibility</mat-icon>
                 </button>
                 <button mat-icon-button color="accent" class="mr-2">
                   <mat-icon>edit</mat-icon>
@@ -97,7 +97,6 @@
 
 <!-- Page preview -->
 <ng-template #modalContent>
-
   <mat-dialog-content>
     <app-painting-detail [painting]="modalPainting"></app-painting-detail>
   </mat-dialog-content>
