--- a/angular-web-app/src/app/components/_pages/painting-detail/painting-detail.component.html
+++ b/angular-web-app/src/app/components/_pages/painting-detail/painting-detail.component.html
@@ -71,7 +71,7 @@
                   </mat-panel-title>
                 </mat-expansion-panel-header>
                 <div class="panel-content">
-                  {{ painting.size }} cm
+                  {{ painting.length }} x {{ painting.width }} cm
                 </div>
               </mat-expansion-panel>
 
